# recap

./: README.md
Recap/: App.js  AppNavigator.js  package-lock.json  package.json
Recap/screens/: Screen1.js  Screen2.js  Screen3.js  Screen4.js
backend/journals/: pyproject.toml
backend/journals/journals/: journals.py  main.py
recap_ts/Recap/: App.tsx  app.json  awsConfig.js  package-lock.json  package.json
recap_ts/Recap/navigation/: TabNavigator.tsx
recap_ts/Recap/screens/: NotificationsScreen.tsx  ProfileScreen.tsx  SettingsScreen.tsx
