[tool.poetry]
name = "journals"
version = "0.1.0"
description = ""
authors = ["Ernest"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
boto3 = "^1.34.64"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
